CLASE-05/kubernetes/06/files/mariadb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: ClusterIP
  ports:
  - name: service-bd
    port: 3306
    targetPort: db-port
  selector:
    app: mariadb
