CLASE-05/kubernetes/06/files/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /test 
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
